--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>ViajandoPernambuco</title>
+<link rel="shortcut icon" href="./img/bandeira-de-pernambuco-pe-logo.png" type="image/x-icon">
+
+<title>ViajandoPernambuco</title>
 </head>
 
 <body>
