--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--links-->
 
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/midia.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,6 +17,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="./img/bandeira-de-pernambuco-pe-logo.png" type="image/x-icon">
+
 
 <title>ViajandoPernambuco</title>
 </head>
@@ -26,7 +28,7 @@
         <ul>
             <a href="#">Home</a>
             <a href="#">Ponto turisco</a>
-            <a href="#">Fale conosco</a>
+            <a href="./html/Blog.html">Blog</a>
         </ul>
     </nav>
     </header>
