--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <nav>
         <ul>
             <a href="#">Home</a>
-            <a href="#">Ponto turisco</a>
-            <a href="./html/Blog.html">Blog</a>
+            <a href="#">Comida</a>
+            <a href="./home/historia.html">Historia</a>
         </ul>
     </nav>
     </header>
