--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav>
         <ul>
             <a href="#">Home</a>
-            <a href="#">Comida</a>
+            <a href="#">Artista Pernambucano</a>
             <a href="./home/historia.html">Historia</a>
         </ul>
     </nav>
