--- a/home/historia.html
+++ b/home/historia.html
@@ -26,7 +26,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="#">Comida</a></li>
                 <li><a href="./home/historia.html">Historia</a></li>
             </ul>
