--- a/home/historia.html
+++ b/home/historia.html
@@ -27,7 +27,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="#">Comida</a></li>
+                <li><a href="./artista.html">Artista Pernambucano</a></li>
                 <li><a href="./home/historia.html">Historia</a></li>
             </ul>
         </nav>
