--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <header>
         <nav>
         <ul>
-            <a href="#">Home</a>
-            <a href="#">Artista Pernambucano</a>
+            <a href="/index.html">Home</a>
+            <a href="./home/artista.html">Artista Pernambucano</a>
             <a href="./home/historia.html">Historia</a>
         </ul>
     </nav>
